--- a/bin/.classpath
+++ b/bin/.classpath
@@ -7,5 +7,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="C:/Users/Lars/Downloads/jinput-master/archive - jinput/archive/dist/jinput.jar" sourcepath="C:/Users/Lars/Downloads/jinput-master/archive - jinput/archive/coreAPI/apidocs/resources">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/C:/Users/Lars/Downloads/jinput-master/archive%20-%20jinput/archive/coreAPI/apidocs/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
