--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -46,11 +46,19 @@ Network Trash Folder
 Temporary Items
 .apdisk
 /.gradle/
+/.classpath
+/.gitattributes
+/.gitignore
+/.project
+/.settings/
+/README.md
+/preview/
+/NA.png
 /entity/
 /fonts/
 /gui/
-/items/
 /level/
 /lib/
 /music/
 /GIP/
+/items/
